<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EL1809" Id="{143ea90b-e3f2-482f-a224-3cd1f335b71e}">
    <Declaration><![CDATA[TYPE ST_EL1809 :
STRUCT
	
	//Terminal 21
	bStartButton 										: BOOL;  // Term21_I.1 Start Button 
    bStopButton 										: BOOL;  // Term21_I.2 Stop Button 
    b24VPowerSupplyOK 									: BOOL;  // Term21_I.3 24V Power Supply OK 
    b24VPowerSupplyOKBck 								: BOOL;  // Term21_I.4 24V Power Supply OK Backup 
    b48VPowerSupplyOK 									: BOOL;  // Term21_I.5 48V Power Supply OK 
    bStageCollection_Home 								: BOOL;  // Term21_I.6 Stage Collection Home Position 
    bSampleRecovery_Vertical_Home 						: BOOL;  // Term21_I.7 Sample Recovery Vertical Home 
    bSampleRecovery_Horizontal_Home 					: BOOL;  // Term21_I.8 Sample Recovery Horizontal Home 
    bWasteOverflowSensor 								: BOOL;  // Term21_I.9 Waste Overflow Sensor 
    bUPSReady 											: BOOL;  // Term21_I.10 UPS Ready 
    bUPSReplaceBattery 									: BOOL;  // Term21_I.11 UPS Replace Battery 
    b48VPowerSupplyOKBck 								: BOOL;  // Term21_I.12 48V Us Power Supply OK 
    bCalibrationBoxPresent 								: BOOL;  // Term21_I.13 Calibration Box Present 
    bThroatJigPresent 									: BOOL;  // Term21_I.14 Throat Jig Present 

	//Terminal 30
	bAccessDoorInterlockFdbk1							: BOOL;  //Term30_I.1 Keyence Access Door Interlock Feedback
	bAccessDoorInterlockFdbk2							: BOOL;  //Term30_I.1 Keyence Access Door Interlock Feedback
	bAccessDoorInterlockFdbk3							: BOOL;  //Term30_I.1 Keyence Access Door Interlock Feedback

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>